Add autentication for dashboard to landing page

--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -6,3 +6,16 @@
 @import "_progress.css";
 @import "_scrollbars.css";
 @import "_table.css";
+
+
+h1, h2, h3, h4, h5, h6 {
+  color: inherit;
+}
+
+.ant-message-notice {
+  z-index: 101;
+}
+
+a[disabled] {
+  cursor: pointer !important;
+}
